--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
 language: python
 
-install: pip install -r requirements.txt
+python:
+  - 3.7
+
+install:
+  - pip install -r requirements.txt
+
+before_script:
+  - python manage.py migrate
+  - python manage.py collectstatic --noinput
 
 script:
-- python manage.py migrate
-- flake8 .
-- black --check --diff .
-- coverage run --source=polls,swe1app manage.py test
+  - black --check .
+  - flake8 .
+  - coverage run --source=swe1,polls manage.py test
 
 after_script:
-- coveralls
+  - coveralls
